IGBF-2729:Remove fix size of top bar for alignment of Install IGB button

--- a/static/apps/css/base.css
+++ b/static/apps/css/base.css
@@ -74,3 +74,7 @@ body {
 #bioviz-url {
     display:none;
 }
+
+#TopMenu {
+  height: auto !important;
+}
